crates/mel-cli/src/snapshots/mel_cli__tests__sema_for_in_binding_implicit.snap
---
source: crates/mel-cli/src/main.rs
expression: "render_snapshot(\"sema/lint/for-in-binding-implicit.mel\",\ninclude_str!(\"../../../tests/corpus/sema/lint/for-in-binding-implicit.mel\"),)"
---
source: sema/lint/for-in-binding-implicit.mel
encoding: utf-8
items: 1
decode diagnostics: 0
lexical diagnostics: 0
parse errors: 0
semantic diagnostics: 0
