crates/mel-cli/src/snapshots/mel_cli__tests__sema_local_proc_shell_unresolved.snap
---
source: crates/mel-cli/src/main.rs
expression: "render_snapshot(\"sema/proc/local-shell-unresolved.mel\",\ninclude_str!(\"../../../tests/corpus/sema/proc/local-shell-unresolved.mel\"),)"
---
source: sema/proc/local-shell-unresolved.mel
encoding: utf-8
items: 2
decode diagnostics: 0
lexical diagnostics: 0
parse errors: 0
semantic diagnostics: 0
