crates/mel-cli/src/snapshots/mel_cli__tests__sema_scripted_panel_flag_mode_span.snap
---
source: crates/mel-cli/src/main.rs
expression: "render_snapshot(\"sema/lint/scripted-panel-flag-mode-span.mel\",\ninclude_str!(\"../../../tests/corpus/sema/lint/scripted-panel-flag-mode-span.mel\"),)"
---
source: sema/lint/scripted-panel-flag-mode-span.mel
encoding: utf-8
items: 1
decode diagnostics: 0
lexical diagnostics: 0
parse errors: 0
semantic diagnostics: 3
[33mWarning:[0m sema: unresolved variable "$gMainPane"
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m sema/lint/scripted-panel-flag-mode-span.mel:1:58 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m$[0m[38;5;249mp[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249mN[0m[38;5;249ma[0m[38;5;249mm[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m`[0m[38;5;249ms[0m[38;5;249mc[0m[38;5;249mr[0m[38;5;249mi[0m[38;5;249mp[0m[38;5;249mt[0m[38;5;249me[0m[38;5;249md[0m[38;5;249mP[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249mm[0m[38;5;249me[0m[38;5;249mn[0m[38;5;249mu[0m[38;5;249mB[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mV[0m[38;5;249mi[0m[38;5;249ms[0m[38;5;249mi[0m[38;5;249mb[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249m [0m[38;5;249mt[0m[38;5;249mr[0m[38;5;249mu[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249mp[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249me[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[33m$[0m[33mg[0m[33mM[0m[33ma[0m[33mi[0m[33mn[0m[33mP[0m[33ma[0m[33mn[0m[33me[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m"[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249my[0m[38;5;249mL[0m[38;5;249ma[0m[38;5;249mb[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249m"[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249mt[0m[38;5;249me[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mO[0m[38;5;249mf[0m[38;5;249mf[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249mt[0m[38;5;249my[0m[38;5;249mp[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m"[0m[38;5;249ma[0m[38;5;249mc[0m[38;5;249mP[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249mT[0m[38;5;249my[0m[38;5;249mp[0m[38;5;249me[0m[38;5;249m"[0m[38;5;249m`[0m[38;5;249m;[0m
 [38;5;240m  │[0m                                                          [33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m┬[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m  
 [38;5;240m  │[0m                                                               [33m╰[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m unresolved variable "$gMainPane"
[38;5;246m───╯[0m
[31mError:[0m sema: flag "-label" is not available in create mode for command "scriptedPanel"
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m sema/lint/scripted-panel-flag-mode-span.mel:1:69 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m$[0m[38;5;249mp[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249mN[0m[38;5;249ma[0m[38;5;249mm[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m`[0m[38;5;249ms[0m[38;5;249mc[0m[38;5;249mr[0m[38;5;249mi[0m[38;5;249mp[0m[38;5;249mt[0m[38;5;249me[0m[38;5;249md[0m[38;5;249mP[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249mm[0m[38;5;249me[0m[38;5;249mn[0m[38;5;249mu[0m[38;5;249mB[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mV[0m[38;5;249mi[0m[38;5;249ms[0m[38;5;249mi[0m[38;5;249mb[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249m [0m[38;5;249mt[0m[38;5;249mr[0m[38;5;249mu[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249mp[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249me[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249m$[0m[38;5;249mg[0m[38;5;249mM[0m[38;5;249ma[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mP[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249m [0m[35m-[0m[35ml[0m[38;5;249m [0m[38;5;249m"[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249my[0m[38;5;249mL[0m[38;5;249ma[0m[38;5;249mb[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249m"[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249mt[0m[38;5;249me[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mO[0m[38;5;249mf[0m[38;5;249mf[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249mt[0m[38;5;249my[0m[38;5;249mp[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m"[0m[38;5;249ma[0m[38;5;249mc[0m[38;5;249mP[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249mT[0m[38;5;249my[0m[38;5;249mp[0m[38;5;249me[0m[38;5;249m"[0m[38;5;249m`[0m[38;5;249m;[0m
 [38;5;240m  │[0m                                                                     [35m─[0m[35m┬[0m  
 [38;5;240m  │[0m                                                                      [35m╰[0m[35m─[0m[35m─[0m flag "-label" is not available in create mode for command "scriptedPanel"
[38;5;246m───╯[0m
[31mError:[0m sema: flag "-tearOff" is not available in create mode for command "scriptedPanel"
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m sema/lint/scripted-panel-flag-mode-span.mel:1:83 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m$[0m[38;5;249mp[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249mN[0m[38;5;249ma[0m[38;5;249mm[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m`[0m[38;5;249ms[0m[38;5;249mc[0m[38;5;249mr[0m[38;5;249mi[0m[38;5;249mp[0m[38;5;249mt[0m[38;5;249me[0m[38;5;249md[0m[38;5;249mP[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249mm[0m[38;5;249me[0m[38;5;249mn[0m[38;5;249mu[0m[38;5;249mB[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mV[0m[38;5;249mi[0m[38;5;249ms[0m[38;5;249mi[0m[38;5;249mb[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249m [0m[38;5;249mt[0m[38;5;249mr[0m[38;5;249mu[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249mp[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249me[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249m$[0m[38;5;249mg[0m[38;5;249mM[0m[38;5;249ma[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mP[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m"[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249my[0m[38;5;249mL[0m[38;5;249ma[0m[38;5;249mb[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249m"[0m[38;5;249m [0m[35m-[0m[35mt[0m[35me[0m[35ma[0m[35mr[0m[35mO[0m[35mf[0m[35mf[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249mt[0m[38;5;249my[0m[38;5;249mp[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m"[0m[38;5;249ma[0m[38;5;249mc[0m[38;5;249mP[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249mT[0m[38;5;249my[0m[38;5;249mp[0m[38;5;249me[0m[38;5;249m"[0m[38;5;249m`[0m[38;5;249m;[0m
 [38;5;240m  │[0m                                                                                   [35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m┬[0m[35m─[0m[35m─[0m[35m─[0m  
 [38;5;240m  │[0m                                                                                       [35m╰[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m flag "-tearOff" is not available in create mode for command "scriptedPanel"
[38;5;246m───╯[0m
